# amap

./: .gitignore  Amap.c  Amap.h  Bayes.c  Bayes_old.c  CHANGES.txt  CRemoveBridges.cpp  CRemoveBridges.h  Kmeans.c  Makefile.am  Makefile.in  MrfPrior.c  NEWS  Numap.c  ParseArgv.c  ParseArgv.h  Prob5to3.c  Prob6to3.c  Pve.c  Pve5.c  Pve6.c  README.md  WarpPriors.c  Watershed3d.c  aclocal.m4  affineRegistration.cpp  aniso3d.c  bwlabel.c  config.h.in  configure  configure.ac  configure.in  configure~  diffeo3d.c  diffeo3d.h  external_software.txt  mincmarchingcubes.c  mincnumap.c  mincnumap.h  mincremovebridges.cpp  (+48 more)
EBTKS/include/: Complex.h  MTypes.h  Spline.h  trivials.h
EBTKS/src/: FileIO.cc  Histogram.cc  MPoint.cc  MString.cc  OpTimer.cc  OrderedCltn.cc  Path.cc  Polynomial.cc  Spline.cc  TBSpline.cc  TrainingSet.cc  amoeba.cc  backProp.cc  dcomplex.cc  fcomplex.cc
EBTKS/templates/: Array.cc  CachedArray.cc  Dictionary.cc  Matrix.cc  Matrix.h  MatrixConv.cc  MatrixSupport.cc  Pool.cc  SimpleArray.cc  ValueMap.cc  miscTemplateFunc.cc
Splines/: Spline.cc  Spline.h  SplineSmooth.cc  SplineSmooth_orig.cc  TBSpline.cc  TBSpline.h
m4/: mni_REQUIRE_LIB.m4  mni_cxx_have_koenig_lookup.m4  smr_CGAL_MAKEFILE.m4  smr_OPTIONAL_LIB.m4  smr_REQUIRED_LIB.m4  smr_WITH_BUILD_PATH.m4
nifti/: nifti1_io.c  nifti1_local.h  znzlib.h
reg-apps/: reg_aladin.cpp  reg_f3d.cpp  reg_tools.cpp
reg-lib/: _reg_affineTransformation.h  _reg_blockMatching.h  _reg_mutualinformation.cpp  _reg_tools.cpp  _reg_tools.h
