dnl $Id: configure.in,v 1.7 2003/06/12 15:54:01 spotspot Exp $
dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_REVISION($Revision: 0.99 $)

AM_INIT_AUTOMAKE(amap,0.1,Christian Gaser <christian.gaser@uni-jena.de>)
AM_CONFIG_HEADER([config.h])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_ARG_ENABLE(openmp, [AC_HELP_STRING([--enable-openmp],[enable OpenMP support [default=no]])], enable_openmp=$enableval, enable_openmp=no)
if test "$enable_openmp" = "yes"; then
	AC_DEFINE(OPENMP,1,[Define to enable OpenMP.])
    [CFLAGS="$CFLAGS -fopenmp"] 
    [CXXFLAGS="$CXXFLAGS -fopenmp"] 
fi

dnl Build only static libs by default
AM_DISABLE_SHARED
AC_PROG_LIBTOOL

smr_WITH_BUILD_PATH

mni_REQUIRE_EBTKS

AC_FUNC_FORK
AC_CHECK_HEADERS(values.h malloc.h)
AC_CHECK_FUNCS(finite isfinite mkstemp)

AVE_ZLIB=0
AS_IF([test "$with_zlib" != no],
  [AC_SEARCH_LIBS([zlibVersion], [z],
    [AC_DEFINE([HAVE_ZLIB], [1], [Enable classes using zlib compression.])
     HAVE_ZLIB=1],
    [if test "$with_zlib" != check; then
      AC_MSG_FAILURE([--with-zlib was given, but test for zlib failed])
     fi])])
AM_CONDITIONAL([HAVE_ZLIB], [test $HAVE_ZLIB = 1])

AC_CHECK_HEADERS()
AC_OUTPUT( Makefile )
