dnl $Id$
dnl Process this file with autoconf to produce a configure script.

AC_INIT
AC_REVISION($Revision$)

AC_PREREQ([2.62])

AM_INIT_AUTOMAKE(amap,0.1,Christian Gaser <christian.gaser@uni-jena.de>)
AM_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_OPENMP
AC_CHECK_HEADERS([omp.h],[
	AC_DEFINE(OPENMP,1,[Define to enable OpenMP.])
    CFLAGS="$CFLAGS $OPENMP_CFLAGS"
    CXXFLAGS="$CXXFLAGS $OPENMP_CFLAGS"
	CPPFLAGS="$CPPFLAGS $OPENMP_CFLAGS"
	LDFLAGS="$LDFLAGS $OPENMP_CFLAGS"
])

AC_ARG_ENABLE(openmp, [AC_HELP_STRING([--enable-openmp],[enable OpenMP support [default=yes]])], enable_openmp=$enableval, enable_openmp=yes)
if test "$enable_openmp" = "yes"; then
	AC_DEFINE(OPENMP,1,[Define to enable OpenMP.])
else
	AC_DEFINE(OPENMP,0,[Define to enable OpenMP.])
fi
AM_CONDITIONAL([OPENMP], [test "$enable_openmp" = yes])

     
AC_ARG_ENABLE(ebtks, [AC_HELP_STRING([--disable-ebtks],[disable use of spline smoothing in EBTKS [default=no]])], disable_ebtks=$disableval, disable_ebtks=no)
if test "$disable_ebtks" = "no"; then
	AC_DEFINE(EBTKS,1,[Define to disable EBTKS.])
    [CFLAGS="$CFLAGS -DSPLINESMOOTH"] 
    [CXXFLAGS="$CXXFLAGS -DSPLINESMOOTH"] 
else
	AC_DEFINE(EBTKS,0,[Define to disable EBTKS.])
fi
AM_CONDITIONAL([EBTKS], [test "$disable_ebtks" = no])

dnl Build only static libs by default
AM_DISABLE_SHARED
AC_PROG_LIBTOOL

smr_WITH_BUILD_PATH

AC_FUNC_FORK
AC_CHECK_HEADERS(values.h malloc.h)
AC_CHECK_FUNCS(finite isfinite mkstemp)

AC_CHECK_LIB([m], [sqrt], LDFLAGS="$LDFLAGS -lm")

AC_CHECK_HEADERS()
AC_OUTPUT( Makefile )
